// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paradox.PersonalityBaseHeading fallbacks renders component with blend 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_blend_heading - {"personality":"<span>Naturalist | Analyzer</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        You bring a natural curiosity to the world and are always interested in expanding your mind to learn new things.  You feel most at ease when experiencing the natural world, and you try to be outdoors as much as possible.  You enjoy an evening with friends, filled with good company and interesting and meaningful discussions yet are equally happy on a hiking, camping or canoeing trip.  Your friends appreciate your ideas and deep thinking.  You are happiest when spending time with others in small, comfortable groups or when working alone. You thrive when you have time to recharge in the natural world.
      </div>
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading fallbacks renders component with types 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading - {"personality":"<span>Naturalist</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.
      </div>
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading perspective renders component 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading_third_person - {"personality":"<span>Inventor</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Inventors'...are creative.  They take a contemporary, 'out of the box' approach to work and life. Inventors use themselves and other medium, often various forms of the arts, to communicate and interact with the world.  Inventors excel when they are 'lost' in their work, completely engrossed in a project.
      </div>
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading perspective renders component with careers link 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading_third_person - {"personality":"<span>Inventor</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Inventors'...are creative.  They take a contemporary, 'out of the box' approach to work and life. Inventors use themselves and other medium, often various forms of the arts, to communicate and interact with the world.  Inventors excel when they are 'lost' in their work, completely engrossed in a project.
      </div>
    </div>
  </div>
  <div
    className="careersLink"
  >
    <div>
      careers_link_heading_third_person
    </div>
    <a
      href="/careers"
    >
      <div
        className="mock"
      >
        Icon - 
        briefcase
      </div>
       
      career_matches
    </a>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading renders component 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading - {"personality":"<span>Inventor</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Inventors'...are creative.  They take a contemporary, 'out of the box' approach to work and life. Inventors use themselves and other medium, often various forms of the arts, to communicate and interact with the world.  Inventors excel when they are 'lost' in their work, completely engrossed in a project.
      </div>
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading renders component with careers link 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading - {"personality":"<span>Inventor</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Inventors'...are creative.  They take a contemporary, 'out of the box' approach to work and life. Inventors use themselves and other medium, often various forms of the arts, to communicate and interact with the world.  Inventors excel when they are 'lost' in their work, completely engrossed in a project.
      </div>
    </div>
  </div>
  <div
    className="careersLink"
  >
    <div>
      careers_link_heading
    </div>
    <a
      href="/careers"
    >
      <div
        className="mock"
      >
        Icon - 
        briefcase
      </div>
       
      career_matches
    </a>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading renders nothing if disabled 1`] = `null`;

exports[`Paradox.PersonalityBaseHeading renders nothing if results not ready 1`] = `null`;

exports[`Paradox.PersonalityBaseHeading themed renders component 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading - {"personality":"<span>Inventor</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Inventors'...are creative.  They take a contemporary, 'out of the box' approach to work and life. Inventors use themselves and other medium, often various forms of the arts, to communicate and interact with the world.  Inventors excel when they are 'lost' in their work, completely engrossed in a project.
      </div>
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading themed renders component with blend 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="badge"
        >
          <img
            alt="Naturalist"
            src="https://cdn.traitify.com/widgets/career-deck/badges/color/naturalist.png"
          />
          <div
            className="badgeDivider"
          />
          <img
            alt="Analyzer"
            src="https://cdn.traitify.com/widgets/career-deck/badges/color/analyzer.png"
          />
        </div>
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_blend_heading - {"personality":"<span>Naturalist | Analyzer</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        You bring a natural curiosity to the world and are always interested in expanding your mind to learn new things.  You feel most at ease when experiencing the natural world, and you try to be outdoors as much as possible.  You enjoy an evening with friends, filled with good company and interesting and meaningful discussions yet are equally happy on a hiking, camping or canoeing trip.  Your friends appreciate your ideas and deep thinking.  You are happiest when spending time with others in small, comfortable groups or when working alone. You thrive when you have time to recharge in the natural world.
      </div>
    </div>
    <div
      className="meaning"
    >
      <video
        controls={true}
        crossOrigin="anonymous"
        playsInline={true}
        poster="https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/thumbnail.jpg"
      >
        <source
          src="https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/video.mp4"
          type="video/mp4"
        />
        <track
          kind="captions"
          src="https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/captions.vtt"
        />
      </video>
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityBaseHeading themed renders component with types 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="details"
    >
      <div
        className="header"
      >
        <div
          className="badge"
        >
          <img
            alt="Naturalist"
            src="https://cdn.traitify.com/widgets/career-deck/badges/color/naturalist.png"
          />
        </div>
        <div
          className="heading"
          dangerouslySetInnerHTML={
            {
              "__html": "personality_base_heading - {"personality":"<span>Naturalist</span>"}",
            }
          }
        />
      </div>
      <div
        className="p"
      >
        'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.
      </div>
    </div>
  </div>
</div>
`;
